[package]
name = "react-skia"
version = "0.1.0"
authors = ["Lukas Bombach <lukas.bombach@googlemail.com>"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "react_skia"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
sdl2 = "0.34.2"
skulpin = "0.9.5"
winit = "0.22.2"